# repty-cli

./: LICENSE  README.md  pyproject.toml  requirements.txt
cmdvault/: ai.py  cli.py  config.py  db.py  hooks.py
cmdvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
repty_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: install.ps1  install.sh  install_hooks.sh
